# project-ai-engineer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/decisions/: 0001-repository-structure.md
sandbox/experiments/: config_lifecycle_demo.py  environment_demo.py
sandbox/scratch/: dataclass_config_demo.py  logging_demo.py  test_logging.py
src/enterprise_ai_platform/: config.py  logging.py
src/enterprise_ai_platform/utils/: logger.py  paths.py
tests/: test_config.py
