[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-platform"
version = "0.1.0"
description = "AI engineering learning project focused on production-style Python, data engineering, and AI systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["python-dotenv>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]